Ratio contrast issues fixed

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -5,7 +5,9 @@
     --accent2-color: #bdc3c7;
     --heading-color: #00008b;
     --font-color: #fff;
+    --font-family1: cursive;
     --shadow-color: grey;
+    --margin: 0;
     
 }
 
@@ -20,7 +22,7 @@
 main h1 {
     text-align: center;
     color: var(--primary-color);
-    font-family: cursive;  
+    font-family: var(--font-family1);  
 }
 
 header {
@@ -155,13 +157,13 @@ header:hover::after {
     height: auto;
 }
 
-.hero h1 {
+.hero h1, .contact h1 {
     position: absolute;
     width: 100%;
     height: 60px;
     top: 20px;
-    padding: 8px 0;
-    font-size: 36px;
+    margin: 15px;
+    font-size: 40px;
     text-align: center;
     background-color: var(--font-color);
     opacity: .8;
@@ -213,8 +215,7 @@ header:hover::after {
 }
 
 .history h2,
-.adventure h1 {
-
+.adventure h2 {
     grid-column: 1/4;
     font-size: 2rem;
     padding-bottom: 30px;
@@ -296,30 +297,35 @@ header:hover::after {
     font-size: 36px;
     font-weight: 500;
     color: var(--font-color);
+    margin-top: 60px;
 }
 
 .content p {
     font-size: 1.2rem;
     color: var(--font-color);
+    margin-top: -10px;
 }
 
 .container {
     width: 100%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
     margin-top: 30px;
 }
 
 .contactInfo {
-    width: 50%;
+    width: auto;
+    max-width: 400px;
+    padding: 40px;
     display: flex;
     flex-direction: column;
+    background: rgb(255, 255, 255, 0.7);
 }
 
 .box {
     position: relative;
-    padding: 20px 0;
+    padding: 0 0;
     display: flex;
 }
 
@@ -342,20 +348,21 @@ header:hover::after {
 .text p {
     display: flex;
     margin-left: 10px;
-    font-size: 16px;
-    color: var(--font-color);
+    font-size: 15px;
+    color: var(--primary-color);
     flex-direction: column;
     font-weight: 300;
 }
 
 .text h3 {
     font-weight: 500;
+    color: var(--primary-color);
 }
 
 .contactForm {
     width: 40%;
     padding: 40px;
-    background: var(--font-color);
+    background: rgb(255, 255, 255, 0.7);
 }
 
 .contactForm h2 {
@@ -414,9 +421,15 @@ header:hover::after {
 
 fieldset {
     display: flexbox;
-    margin: 0;
+    margin: var(--margin);
     padding: 1rem;
     border: 1.5px solid var(--secondary-color);
+}
+
+fieldset ul {
+    list-style: none;
+    padding: 0;
+    margin: var(--margin);
 }
 
 legend {
@@ -429,17 +442,16 @@ label {
     color: var(--primary-color);
 }
 
-input[type="radio"] {
+input[type="radio"], 
+input[type="checkbox"] {
     accent-color: var(--secondary-color);
     width: 18px;
     height: 18px;
 }
 
-input[type="checkbox"] {
-    width: 18px;
-    height: 18px;
+input[type="checkbox"]
+ {
     vertical-align: text-bottom;
-    accent-color: var(--secondary-color);
 }
 
 input[type="checkbox"]:checked {
@@ -481,7 +493,7 @@ input[type="checkbox"]:checked {
     align-items: center;
 }
 
-.map .box h1 {
+.map .box h2 {
     color: var(--primary-color);
     font-size: 38px;
 }
@@ -514,13 +526,14 @@ figcaption {
 }
 
 figcaption .title {
-    font-size: 1.5em;
+    font-size: 1.8em;
     font-weight: bold;
-    margin: 0;
+    margin: var(--margin);
 }
 
 figcaption .subtitle {
-    font-size: .9em;
-    margin: 0;
+    font-size: 1.2em;
+    font-weight: 600;
+    margin: var(--margin);
     color: var(--primary-color);
 }
